# Ice-Hockey-Sim

./: .gitignore  LICENCE.md  README.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/data/names/: Armenia.json  Australia.json  Austria.json  Belarus.json  Canada.json  China.json  Croatia.json  Estonia.json  Germany.json  Greece.json  Iceland.json  Iran.json  Kyrgyzstan.json  Latvia.json  Lithuania.json  Luxembourg.json  Malaysia.json  Mongolia.json  Netherlands.json  New Zealand.json  North Korea.json  Poland.json  Russia.json  Serbia.json  Singapore.json  Slovakia.json  South Korea.json  Spain.json  Sweden.json  Switzerland.json  Thailand.json  United Kingdom.json  Uzbekistan.json
src-tauri/icons/: icon.icns
src-tauri/json/names/: Albania.json  Algeria.json  Andorra.json  Argentina.json  Armenia.json  Australia.json  Austria.json  Azerbaijan.json  Belarus.json  Belgium.json  Bermuda.json  Bosnia and Herzegovina.json  Brazil.json  Bulgaria.json  Cabo Verde.json  Cameroon.json  Canada.json  Cayman Islands.json  Chile.json  China.json  Chinese Taipei.json  Colombia.json  Congo.json  Croatia.json  Cuba.json  Czech Republic.json  Czechia.json  Democratic Republic of Congo.json  Denmark.json  Dominican Republic.json  Egypt.json  Eritrea.json  Estonia.json  Ethiopia.json  Finland.json  France.json  Gambia.json  Georgia.json  Germany.json  Ghana.json  (+65 more)
src-tauri/sql/migrations/: 100_keyvalue.sql  100_view_competition_screen.sql  1_competition.sql  1_table_competition.sql  2_country.sql  2_table_country.sql  3_game.sql  3_table_game.sql  4_person.sql  4_table_person.sql  5_table_team.sql  5_team.sql  6_keyvalue.sql  6_table_season.sql  900_insert_position.sql  999_position_inserts.sql  99_table_keyvalue.sql
src-tauri/sql/queries/: competition_children.sql  current_season_teamdata.sql
src-tauri/src/: app_data.rs  commands.rs  country.rs  custom_types.rs  database.rs  event.rs  game.rs  io.rs  lib.rs  main.rs  misc.rs  person.rs  team.rs  terminal_tests.rs  tests.rs  time.rs  types.rs
src-tauri/src/commands/: continue_game.rs  mod.rs  tests.rs
src-tauri/src/competition/: knockout_generator.rs  mod.rs
src-tauri/src/competition/format/: knockout.rs  knockout_round.rs  mod.rs
src-tauri/src/competition/season/: knockout.rs  knockout_round.rs  mod.rs  ranking.rs  round_robin.rs  schedule_generator.rs  sorting.rs  team.rs
src-tauri/src/competition/stage/: knockout.rs  mod.rs  (+4 more)
src-tauri/src/db/: country.rs  mod.rs  time.rs
src-tauri/src/logic/: app_data.rs  country.rs  event.rs  io.rs  mod.rs  time.rs  types.rs
src-tauri/src/match_event/: cache.rs  event.rs  mod.rs  team.rs
src-tauri/src/person/: attribute.rs  manager.rs  mod.rs
src-tauri/src/team/: ai.rs  lineup.rs  mod.rs
(+84 files in other folders)
